# america-elections-2024

./: .gitignore  README.md  activate.bat  fix-america-elections.md  pyproject.toml
sample-data/: sample-groups.md  sample-locations.md  sample-people.md  sample-posts.md
src/: test.py
